--- a/link.html
+++ b/link.html
@@ -43,8 +43,8 @@
     }
 
     // 短形の位置と間隔を設定
-    var rectCount = 6;
-    var row1Count = Math.ceil(rectCount / 2); // 1行目の丸の数
+    var rectCount = 4;
+    var row1Count = 3; // 1行目の短形の数
     var spacing = canvas.width / (row1Count + 1);
     var row1Y = canvas.height / 3; // 1行目のY座標
     var row2Y = (canvas.height / 3) * 2; // 2行目のY座標
