--- a/link.html
+++ b/link.html
@@ -57,7 +57,7 @@
         x = i * spacing;
         y = row1Y;
       } else {
-        x = (i - row1Count) * spacing;
+        x = (i - row1Count + 1) * spacing;
         y = row2Y;
       }
 
