--- a/option.html
+++ b/option.html
@@ -14,6 +14,9 @@
 <body>
     <h1>ゲームのオプション</h1>
 
+    ユーザ名の変更
+    <input type="text" id="name" onChange='document.cookie = "name=" + this.value + "; max-age=31536000"'><br>
+    
     <label for="volumeSlider">音量:</label>
     <input type="range" id="volumeSlider" min="0" max="100" value="50">
 
