--- a/option.html
+++ b/option.html
@@ -44,6 +44,11 @@
 
             alert('設定が保存されました！');
         }
+
+        let volume = document.getElementById('volume-slider');
+volume.addEventListener("change", function(e) {
+    audio.volume = e.currentTarget.value / 100;
+})
     </script>
 </body>
 </html>
