--- a/link.html
+++ b/link.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <canvas id="myCanvas" width="600" height="200"></canvas>
+  <canvas id="myCanvas" width="1000" height="600"></canvas>
 
   <script>
     // canvas要素の参照を取得
@@ -22,7 +22,7 @@
     // 短形を描画する関数
     function drawRect(x, y,link) {
       context.beginPath();
-      context.strokeRect(x, y, 20, 20);
+      context.strokeRect(x, y, 200, 60);
       context.fillStyle = "blue";
       context.fill();
       context.closePath();
@@ -45,7 +45,7 @@
     // 短形の位置と間隔を設定
     var rectCount = 4;
     var row1Count = 3; // 1行目の短形の数
-    var spacing = canvas.width / (row1Count + 1);
+    var spacing = canvas.width / (row1Count + 1) + 50;
     var row1Y = canvas.height / 3; // 1行目のY座標
     var row2Y = (canvas.height / 3) * 2; // 2行目のY座標
 
@@ -53,11 +53,11 @@
     for (var i = 1; i <= rectCount; i++) {
       var x, y, link;
 
-      if (i <= row1Count) {
-        x = i * spacing;
+      if (i <= row1Count) {//x座標をいじっても横にずれるだけ
+        x = i * spacing - 150;
         y = row1Y;
       } else {
-        x = (i - row1Count + 1) * spacing;
+        x = (i - row1Count + 1) * spacing - 150;
         y = row2Y;
       }
 
