--- a/option.html
+++ b/option.html
@@ -12,6 +12,12 @@
     </style>
 </head>
 <body>
+    <figure>
+  <figcaption>Listen to the T-Rex:</figcaption>
+  <audio controls src="/media/cc0-audio/t-rex-roar.mp3">
+    <a href="/media/cc0-audio/t-rex-roar.mp3"> Download audio </a>
+  </audio>
+</figure>
     <h1>ゲームのオプション</h1>
 
     ユーザ名の変更
