--- a/link.html
+++ b/link.html
@@ -22,7 +22,7 @@
     // 短形を描画する関数
     function drawRect(x, y,link) {
       context.beginPath();
-      context.strokeRect(x, y, 200, 60);
+      context.strokeRect(x, y, 240, 100);
       context.fillStyle = "blue";
       context.fill();
       context.closePath();
@@ -45,19 +45,19 @@
     // 短形の位置と間隔を設定
     var rectCount = 4;
     var row1Count = 3; // 1行目の短形の数
-    var spacing = canvas.width / (row1Count + 1) + 50;
+    var spacing = canvas.width / (row1Count + 1) + 100;
     var row1Y = canvas.height / 3; // 1行目のY座標
-    var row2Y = (canvas.height / 3) * 2; // 2行目のY座標
+    var row2Y = (canvas.height / 3) * 2 + 60; // 2行目のY座標
 
     // 短形を描画
     for (var i = 1; i <= rectCount; i++) {
       var x, y, link;
 
       if (i <= row1Count) {//x座標をいじっても横にずれるだけ
-        x = i * spacing - 150;
+        x = i * spacing - 300;
         y = row1Y;
       } else {
-        x = (i - row1Count + 1) * spacing - 150;
+        x = (i - row1Count + 1) * spacing - 300;
         y = row2Y;
       }
 
