--- a/link2.html
+++ b/link2.html
@@ -93,7 +93,7 @@
       var isOverRect = false;
 
       // マウスが短形の範囲内にあるかチェック
-      for (var i = 1; i <= circleCount; i++) {
+      for (var i = 1; i <= rectCount; i++) {
         var x, y;
 
         if (i <= row1Count) {
