--- a/sisaku.html
+++ b/sisaku.html
@@ -4,6 +4,7 @@
         <script src="common.js"></script>
         <script src="character.js"></script>
         <script src="fire.js"></script>
+        <script src="keymove.js"></script>
         <script src="main.js"></script>
 
         <style>canvas {border: 1px solid gray;}</style>
