--- a/sisaku.html
+++ b/sisaku.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html>
     <head>
+        <meta charset="UTF-8"/>
         <script src="common.js"></script>
         <script src="character.js"></script>
         <script src="fire.js"></script>
         <script src="keymove.js"></script>
+        <script src="enemy.js"></script>
         <script src="main.js"></script>
 
         <style>canvas {border: 1px solid gray;}</style>
