--- a/sisakuMerge.html
+++ b/sisakuMerge.html
@@ -93,7 +93,7 @@ body {
   </li>
   <li>
     <img src="https://3.bp.blogspot.com/-nClKZyJUWt4/Vx9UvI7L1zI/AAAAAAAA6D4/IOq_ZI-TwfsrabjVQogJFPOx7t8Nr00SQCLcB/s800/money_fueru_dollar.png" alt="スコア加算">
-    <p>→(加算)</p>
+    <p>(加算)</p>
   </li>
   <li>
     <img src="https://2.bp.blogspot.com/-QpIzYIhX_R0/VrN1H-ENQYI/AAAAAAAA3xU/v8lJEBoRMGA/s800/denkyuu_on.png" alt="選択肢の削除">
@@ -101,7 +101,7 @@ body {
   </li>
   <li>
     <img src="https://1.bp.blogspot.com/-9ir3UHNSImc/VY4WpttotxI/AAAAAAAAusY/x8zBMdMxZb4/s800/mark_heart_anshin_anzen.png" alt="弾丸削除">
-    <p>←(安全)</p>
+    <p>←(弾丸消去)</p>
   </li>
 </ul>
     </body>
